# cpp_course

./: .gitignore
Chapter 1/First/: First.sln
Chapter 2/Example2-1/: example2-1.txt
Chapter 2/Example2-3/: example2-3.txt
Chapter 2/Example2-4/: example2-4.txt
Chapter 4/4.1 - data type/: assignd.cpp  incdate.cpp  incdate2.cpp
Chapter 4/4.2 - hide/: stack.cpp  stack.h  stack1.cpp  stack1.h  sttest.cpp  sttest1.cpp
Chapter 4/4.3 - encapsulation steps/: employee.cpp  employee.h  empltest.cpp
Chapter 4/4.4 - create operators/: ccomplex.cpp  ccomplex.h  ccomptest.cpp
Chapter 4/4.5 - overload operators/: ddate.cpp  ddate.h  ddatetest.cpp
Chapter 4/4.6 - access encapsulated data/: ccomplex.cpp  ccomplex.h
Chapter 4/4.7 - global data/: application.h
Chapter 4/4.8 -  structures and classes/: linkedli.cpp  linkedli.h  listtest.cpp
Chapter 5/5.1 - OOP or Procedural/: 5.1 - OOP or Procedural.sln
Chapter 5/5.2 - Global or Private/: 5.2 - Global or Private.sln
Chapter 5/5.3 - Scope Operator/: 5.3 - Scope Operator.sln
Chapter 5/5.4 - Dot Notation/: 5.4 - Dot Notation.sln
Chapter 5/5.5 - Overloading constructors/: 5.5 - Overloading constructors.sln
Chapter 5/5.6 - Overloading Functions/: 5.6 - Overloading Functions.sln
Chapter 5/5.7 - Inheritance/: 5.7 - Inheritance.sln
Chapter 5/5.8 - Parameters in Inheritance/: 5.8 - Parameters in Inheritance.sln
Chapter 5/5.9 - Virtual and Non-Virtual Classes/: 5.9 - Virtual and Non-Virtual Classes.sln
Chapter 7/7.6 - STL String/: main.cpp
Chapter 8/8.3 - Locate an Element/: CMakeLists.txt  compare.h  main.cpp
(+547 files in other folders)
